# gamma-stash

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
gamma_mods_downloader/: __init__.py  __main__.py  cli.py  config.py  downloader.py  flaresolverr_client.py  html_rebuilder.py  setup.py  ssh_utils.py  terminal.py  tui.py
sample_data/: jdownloader_links_sample.txt  mods_sample.txt
scripts/: build_exe.py  download_all.sh  generate_icon.py  rebuild_html.sh
