[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamma-stash"
version = "0.3.0"
description = "G.A.M.M.A. STASH — Batch download G.A.M.M.A. mods using the official mods.txt manifest"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hermes Agent / Nous Research"},
]

dependencies = [
    "pyyaml>=6.0",
    "textual>=0.50",
]

[project.scripts]
gamma-stash = "gamma_mods_downloader.cli:main"

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["gamma_mods_downloader*"]
